# latents

./: .env.example  .gitignore  .vercelignore  ARCHITECTURE.md  CAA_COMPATIBILITY.md  LICENSE  MANIFEST.in  PACKAGE_NAMING_STRATEGY.md  PACKAGE_ORGANIZATION.md  PLUGIN_ARCHITECTURE_SUMMARY.md  PLUGIN_GUIDE.md  README.md  RESEARCHER_ONBOARDING.md  SCALING_AND_USAGE.md  index.html  latents_colab_demo.ipynb  latents_demo.ipynb  pyproject.toml  requirements.txt  setup.py  vercel.json
data_download/: control_ablated.json  control_nonplanning.json  control_traps.json  raw_prompts.json  sanity_check_prompts.json  test_prompts.json  train_prompts.json  val_prompts.json
examples/: complete-results.html  interactive-sandbox.html  plugin_examples.py  quick_demo.py  results-dashboard.html
latents/: cli.py  latents_demo.py  model_adapter.py
latents/core/: framework.py  registry.py  steering_vector.py
latents/dimensions/: __init__.py  abstractness.py  formality.py  technicality.py  temporal.py
public/: experiments.json  index.html
public/examples/: temporal-explorer.html
research/: ISSUES.md  README.md
research/datasets/: abstractness_pairs.json  confound_experiment.json  formality_pairs.json  technicality_pairs.json
research/docs/: ADVERSARIAL_PROBE_TEST_RESULTS.md  COMPREHENSIVE_FINDINGS.md  EXPERIMENT_IN_PROGRESS.md  FULL_EXPERIMENT_PLAN.md  GCP_SETUP.md  PHASE0_RESULTS.md  QUICKSTART.md  RESULTS_SUMMARY.md  RIGOROUS_ANALYSIS.md  STATUS.md  (+3 more)
scripts/: extract_all_dimensions.py  update-visualizations.sh
steering_vectors/: README.md
templates/: temporal_steering.html
temporal_steering/: __init__.py  cli.py  dataset.py  extract_steering_vectors.py
(+42 files in other folders)
