[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "temporal-steering"
version = "0.1.0"
description = "Steer GPT-2's temporal scope using Contrastive Activation Addition"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Justin Shenk"}
]
keywords = ["gpt2", "steering", "activation", "temporal", "nlp", "transformers"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "torch>=2.0.0",
    "transformers>=4.30.0",
    "numpy>=1.24.0",
    "tqdm>=4.65.0",
    "flask>=2.3.0",
]

[project.optional-dependencies]
dev = [
    "jupyter",
    "matplotlib",
    "ipywidgets",
    "pytest",
]

[project.urls]
Homepage = "https://github.com/justinshenk/temporal-steering"
Repository = "https://github.com/justinshenk/temporal-steering"

[project.scripts]
temporal-steering = "temporal_steering.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["temporal_steering*"]
exclude = ["tests*", "venv*", "data*", "activations*", "probes*", "results*"]

[tool.setuptools.package-data]
temporal_steering = ["templates/*.html", "steering_vectors/*.json"]
